--- a/React/ReactDocs/tictactoe/index.html
+++ b/React/ReactDocs/tictactoe/index.html
@@ -8,13 +8,6 @@
         font: 14px "Helvetica", sans-serif;
       }
 
-      button {
-        width: 50px;
-        height: 50px;
-        font-size: 24px;
-        font-weight: bold;
-      }
-
       .board-row:after {
         clear: both;
         content: "";
@@ -27,12 +20,26 @@
 
       .square {
         float: left;
+        width: 50px;
+        height: 50px;
+        font-size: 24px;
+        font-weight: bold;
       }
     </style>
     <title>Tic Tac Toe</title>
   </head>
   <body>
     <div id="app"></div>
+
+    <!--
+    TODO
+    - Display the location for each move in the format (col, row) in the move
+    - history list. Bold the currently selected item in the move list. Rewrite
+    - Board to use two loops to make the squares instead of hardcoding them. Add a
+    - toggle button that lets you sort the moves in either ascending or descending
+    - order. When someone wins, highlight the three squares that caused the win.
+    - When no one wins, display a message about the result being a draw.
+    -->
 
     <script
       crossorigin
@@ -56,30 +63,53 @@
                 squares: Array(9).fill(null)
               }
             ],
+            stepNumber: 0,
             xIsNext: true
           };
         }
 
         handleClick(i) {
-          const history = this.state.history;
+          const history = this.state.history.slice(
+            0,
+            this.state.stepNumber + 1
+          );
           const current = history[history.length - 1];
-          const squares = current.history.slice();
+          const squares = current.squares.slice();
 
-          // check winner
           if (calcWinner(squares) || squares[i]) return;
 
-          // toggle next move
           squares[i] = this.state.xIsNext ? "X" : "O";
+
           this.setState({
             history: history.concat([{ squares }]),
+            stepNumber: history.length,
             xIsNext: !this.state.xIsNext
+          });
+        }
+
+        jumpTo(step) {
+          this.setState({
+            stepNumber: step,
+            xIsNext: step % 2 === 0
           });
         }
 
         render() {
           const history = this.state.history;
-          const current = history[history.length - 1];
+          const current = history[this.state.stepNumber];
           const winner = calcWinner(current.squares);
+
+          const moves = history.map((step, move) => {
+            const desc = move ? "Go to move #" + move : "Go to game start";
+
+            return (
+              <li key={move}>
+                <button className="steps" onClick={() => this.jumpTo(move)}>
+                  {desc}
+                </button>
+              </li>
+            );
+          });
 
           let status;
           if (winner) {
@@ -97,8 +127,8 @@
                 />
               </div>
               <div className="game-info">
-                <h2>{status}</h2>
-                <ol>{/* TODO */}</ol>
+                <div>{status}</div>
+                <ol>{moves}</ol>
               </div>
             </div>
           );
@@ -110,7 +140,7 @@
           return (
             <Square
               value={this.props.squares[i]}
-              handleClick={() => this.props.onClick(i)}
+              onClick={() => this.props.onClick(i)}
             />
           );
         }
