--- a/JS/JS30/04-Array-Cardio/index.html
+++ b/JS/JS30/04-Array-Cardio/index.html
@@ -78,6 +78,7 @@
         inventor => inventor.year >= 1500 && inventor.year <= 1600
       );
 
+      console.log("Inventors born in the 1500s");
       console.table(inventorsFrom1500);
 
       // Array.prototype.map()
@@ -86,26 +87,52 @@
         inventor => `${inventor.first} ${inventor.last}`
       );
 
+      console.log("Inventors");
       console.table(inventorsNames);
 
       // Array.prototype.sort()
       // 3. Sort the inventors by birthdate, oldest to youngest
-      const oldToYoung = inventors.sort((firstP, secondP) => {
-        console.log(firstP.year);
-      });
+      const oldToYoung = inventors.sort((a, b) => (a.year > b.year ? 1 : -1));
 
-      // console.table(oldToYoung);
+      console.log("Inventors, oldest to youngest");
+      console.table(oldToYoung);
 
       // Array.prototype.reduce()
       // 4. How many years did all the inventors live all together?
+      const totalYears = inventors.reduce((total, inventor) => {
+        return total + (inventor.passed - inventor.year);
+      }, 0);
+
+      console.log("Total years lived");
+      console.log(totalYears);
 
       // 5. Sort the inventors by years lived
+      const sortedTotalYears = inventors.sort((a, b) => {
+        const lastPerson = a.passed - a.year;
+        const nextPerson = b.passed - b.year;
+        return lastPerson > nextPerson ? -1 : 1;
+      });
+
+      console.log("Sorted total years lived");
+      console.table(sortedTotalYears);
 
       // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
       // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+      // const allDe = document.querySelectorAll(".mw-category-group a");
+      // const onlyDe = allDe
+      //   .map(de => de.textContent)
+      //   .filter(de => de.includes("de"));
 
       // 7. sort Exercise
       // Sort the people alphabetically by last name
+      const alpha = people.sort((lastOne, nextOne) => {
+        const [lastA, firstA] = lastOne.split(", ");
+        const [lastB, firstB] = nextOne.split(", ");
+
+        return lastA > lastB ? 1 : -1;
+      });
+
+      console.table(alpha);
 
       // 8. Reduce Exercise
       // Sum up the instances of each of these
@@ -125,6 +152,18 @@
         "car",
         "truck"
       ];
+
+      const transpo = data.reduce((obj, item) => {
+        if (!obj[item]) {
+          obj[item] = 0;
+        }
+
+        obj[item]++;
+
+        return obj;
+      }, {});
+
+      console.log(transpo);
     </script>
   </body>
 </html>
